tests/errors/init_state/projection/downcast_write_on_moved_enum.sim

        enum Option: Copy + Drop { None: unit Some: i64 }
        fn f(o: Option) {
          sink: Option;
          entry:
            sink = move o;
            o as Some = 7;
            return
        }
        