tests/errors/init_state/projection/downcast_write_on_moved_enum.err.expected
error: at 7:13: [VF-DowncastVariantNotRefined] In function 'f', block 'entry': cannot downcast 'o as Some' here: 'o' is not refined to variant 'Some'
   |
 7 |             o as Some = 7;
   |             ^^^^^^^^^^^^^
error: at 7:13: [INIT-WriteThroughUninitEnumProjection] In function 'f', block 'entry': cannot write through variant projection: 'o' is not initialized here
   |
 7 |             o as Some = 7;
   |             ^^^^^^^^^^^^^
